--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body{
 
 ul {
     list-style: none;
-    width: 50%;
+    width: 100%;
   }
   
   .tasks-item {
@@ -34,4 +34,12 @@ ul {
     margin-bottom: 15px;
     padding: 15px;
     border-radius: 5px;
+  }
+
+  .task-input{
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 15px;
+    border: none;
   }
